added style variables for theming

--- a/px-inbox.html
+++ b/px-inbox.html
@@ -16,6 +16,22 @@
       // define or bind to your details view here
     </px-inbox>
 
+### Styling
+The following custom properties are available for styling:
+
+Custom property | Description | Default
+----------------|-------------|----------
+`--px-inbox-border-color` | Border color for list items | `$gray6`
+`--px-inbox-secondary-text-color` | Text color for subtitle and date | `$gray6`
+`--px-inbox-li-background-color` | Background color for list items | `$gray1`
+`--px-inbox-li-background-color--selected` | Background color for selected list item | `$select-blue-default`
+`--px-inbox-li-text-color--selected` | Text color for selected list item | `$white`
+`--px-inbox-icon-outline-color` | Outline color for all alert icons | `$white`
+`--px-inbox-alert-color` | Background color for level 1 alert icons | `$alert-red`
+`--px-inbox-warning-color` | Background color for level 2 alert icons | `$alert-orange`
+`--px-inbox-error-color` | Background color for level 3 alert icons | `$alert-yellow`
+`--px-inbox-information-color` | Background color for level 4 alert icons | `$alert-blue`
+
 @element px-inbox
 @blurb A list/detail or "Inbox" view for drilling down on items for more information.
 @homepage index.html
