--- a/px-inbox.html
+++ b/px-inbox.html
@@ -43,10 +43,17 @@ Custom property | Description | Default
     <style include="px-inbox-styles"></style>
     <div id="container" class="container flex">
       <div id="list" class="list u-1/3">
-        <div class="flex flex--left flex--middle u-m--">
-          <span class="u-mr--">Sort:</span>
-          <px-dropdown class="u-mr" value="{{sortBy}}" display-value="{{sortBy}}">
+        <div class="search-field flex flex--left flex--middle">
+          <input class="text-input" value="{{_query::input}}"></input>
+          <iron-icon class="search-icon" icon="fa:fa-search"></iron-icon>
+        </div>
+        <div class="flex flex--left flex--middle">
+          <span class="u-mh--">Sort by:</span>
+          <px-dropdown class="sort-dropdown" value="{{sortBy}}" display-value="{{sortBy}}">
             <px-dropdown-content
+              class="sort-dropdown-content"
+              extend-dropdown=true
+              extend-dropdown-by=15
               items='[
                 {"key":"one", "val": "Title"},
                 {"key":"two", "val": "Subtitle"},
@@ -54,8 +61,6 @@ Custom property | Description | Default
                 {"key":"two", "val": "Date"}]'>
             </px-dropdown-content>
           </px-dropdown>
-          <span class="u-mr--">Search:</span>
-          <input class="text-input" value="{{_query::input}}"></input>
         </div>
         <ul class=list-ui>
           <template is="dom-repeat" items="{{listItems}}" as="listItem" filter="{{_computeFilter(_query)}}" sort="{{_computeSort(sortBy)}}">
