--- a/px-inbox.html
+++ b/px-inbox.html
@@ -42,7 +42,7 @@ Custom property | Description | Default
   <template>
     <style include="px-inbox-styles"></style>
     <div id="container" class="container flex">
-      <div id="list" class="list u-1/3">
+      <div id="list" class="list u-1/1">
         <div class="search-field flex flex--left flex--middle">
           <input class="text-input" value="{{_query::input}}"></input>
           <iron-icon class="search-icon" icon="fa:fa-search"></iron-icon>
@@ -89,9 +89,9 @@ Custom property | Description | Default
           </template>
         </ul>
       </div>
-      <div id="detail" class="detail u-2/3">
+      <!--<div id="detail" class="detail u-2/3">
         <content></content>
-      </div>
+      </div>-->
     </div>
 
   </template>
