update demo page using px-demo

--- a/demo.html
+++ b/demo.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>px-inbox Demo</title>
-  <link rel="stylesheet" type="text/css" href="css/px-inbox-demo.css" />
+  <link rel="stylesheet" type="text/html" href="css/px-inbox-styles.html" />
   <!-- Import custom element. Note: see comment about relative paths to dependencies in the *.html file referenced below -->
   <script src="../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../px-theme/px-theme.html" />
+  <link rel="import" href="../px-theme/px-theme-styles.html" />
+  <style include="px-theme-styles" is="custom-style"></style>
   <link rel="import" href="px-inbox.html" />
   <link rel="import" href="px-inbox-detail.html" />
 
