--- a/px-inbox.html
+++ b/px-inbox.html
@@ -190,7 +190,7 @@ Custom property | Description | Default
         }
         // If not recognized as a valid date string, just display whatever was passed in.
         else {
-          this.istItems[i].formattedDate = this.listItems[i].date;
+          this.listItems[i].formattedDate = this.listItems[i].date;
         }
       };
       // By default, the first item in the array is selected on load.
