--- a/px-inbox.html
+++ b/px-inbox.html
@@ -144,7 +144,7 @@ Custom property | Description | Default
       sortItems: {
         type: Array,
         defaultValue: function() {
-          return [{"key":"one", "val": "Title"},{"key":"two", "val": "Subtitle"}, {"key":"two", "val": "Severity"},{"key":"two", "val": "Date"}];
+          return [{"key":"1", "val": "Title"},{"key":"2", "val": "Subtitle"}, {"key":"3", "val": "Severity"},{"key":"4", "val": "Date"}];
         }
       },
       /**
