code review: update dependencies, icon

--- a/demo/px-inbox-detail-demo.html
+++ b/demo/px-inbox-detail-demo.html
@@ -33,7 +33,7 @@ we've done in this file, or you could define your view in plain HTML/JS/CSS or a
      <template is="dom-if" if="{{isSelected}}">
       <div class="heading--page flex flex--left">{{title}}</div>
       <div class="details">
-        <span class="heading--section"><iron-icon class="u-mr-" icon="px:alerts"></iron-icon>Alert Information</span>
+        <span class="heading--section"><iron-icon class="u-mr-" icon="px:exclamation-triangle"></iron-icon>Alert Information</span>
         <div class="flex u-mt">
           <div class="flex__item">
             <span class="label">Alert ID</span><br/>
