code review feedback

--- a/demo/index.html
+++ b/demo/index.html
@@ -110,7 +110,7 @@
         value: function(){
           return [
             { configName: "Basic",
-              configShowProps: []
+              configReset: true
             }
           ]
         }
