--- a/px-inbox.html
+++ b/px-inbox.html
@@ -139,7 +139,7 @@ Custom property | Description | Default
         value: "ascending"
       },
 
-      /* A JSON array that will be passed into the items for the drop menu on the inbox.  To maintain sorting functionality, each item in props must have a field with the same name as the name in the sort menu up to capitalization.
+      /* A JSON array that will be passed into the items for the drop menu on the inbox.  To maintain sorting functionality, each item in props must have a field with the same name as the name in the sort menu up to capitalization.  Follow formatting for px-dropdown component.
       */
       sortItems: {
         type: Array,
