documented and checked for consistency

--- a/demo/index.html
+++ b/demo/index.html
@@ -105,15 +105,15 @@
           return [
             {
               "key": "one",
-              "val": "UUID"
+              "val": "Title"
             },
             {
               "key": "two",
-              "val": "Tag"
+              "val": "Subtitle"
             },
             {
               "key": "three",
-              "val": "Classification"
+              "val": "Severity"
             },
             {
               "key": "four",
