--- a/px-inbox.html
+++ b/px-inbox.html
@@ -6,7 +6,8 @@
 <link rel="import" href="../polymer/polymer.html"/>
 <link rel="import" href="css/px-inbox-styles.html">
 <link rel="import" href="../px-dropdown/px-dropdown.html" />
-<link rel="import" href="../px-polymer-font-awesome/px-icon-set.html" />
+<link rel="import" href="../px-icon-set/px-icon-set.html" />
+<link rel="import" href="../px-icon-set/px-icon.html" />
 <link rel="import" href="../px-alert-label/px-alert-label.html" />
 <script src="../moment/moment.js"></script>
 
@@ -58,7 +59,7 @@ Custom property | Description | Default
             display-value="{{sortBy}}"
             items='[{"key":"one", "val": "Title"},{"key":"two", "val": "Subtitle"},{"key":"two", "val": "Severity"},{"key":"two", "val": "Date"}]'>
           </px-dropdown>
-          <iron-icon id="sortIcon" class="actionable actionable--action" on-tap="_reverseSort" icon="px:arrow-up"></iron-icon>
+          <px-icon id="sortIcon" class="actionable actionable--action" on-tap="_reverseSort" icon="px:arrow-up"></px-icon>
         </div>
       </div>
       <ul id="list__body" class="list-ui list-ui--small" on-scroll="_updateClass">
